--- a/Numpy Activity - Dimaculangan.ipynb
+++ b/Numpy Activity - Dimaculangan.ipynb
@@ -82,24 +82,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array: [[0.30816892 0.85879166 0.5492971  0.21921201 0.22072452]\n",
+      " [0.95219283 0.32902883 0.2474382  0.13830138 0.17444385]\n",
+      " [0.32673409 0.43534122 0.63239901 0.67846404 0.19965251]\n",
+      " [0.52687587 0.70989177 0.27875632 0.35331307 0.07546433]]\n",
+      "0.07546432719925855\n",
+      "0.9521928314344873\n",
+      "0.41072457676106133\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 2-dimensional array\n",
-    "# array = \n",
-    "\n",
+    "array = np.random.random((4,5))\n",
+    "print(f\"Array: {array}\")\n",
     "# Reshape the array into a 1-dimensional array\n",
-    "# reshaped_array = \n",
+    "reshaped_array = array.reshape(-1)\n",
     "\n",
     "# Find the minimum, maximum, and mean values\n",
-    "# min_value = \n",
-    "# max_value = \n",
-    "# mean_value = \n",
+    "min_value = np.min(reshaped_array)\n",
+    "max_value = np.max(reshaped_array)\n",
+    "mean_value = np.mean(reshaped_array)\n",
     "\n",
-    "# print(min_value)\n",
-    "# print(max_value)\n",
-    "# print(mean_value)"
+    "print(min_value)\n",
+    "print(max_value)\n",
+    "print(mean_value)"
    ]
   },
   {
