--- a/Numpy Activity - Dimaculangan.ipynb
+++ b/Numpy Activity - Dimaculangan.ipynb
@@ -40,16 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install numpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,20 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array: [[0.30816892 0.85879166 0.5492971  0.21921201 0.22072452]\n",
-      " [0.95219283 0.32902883 0.2474382  0.13830138 0.17444385]\n",
-      " [0.32673409 0.43534122 0.63239901 0.67846404 0.19965251]\n",
-      " [0.52687587 0.70989177 0.27875632 0.35331307 0.07546433]]\n",
-      "0.07546432719925855\n",
-      "0.9521928314344873\n",
-      "0.41072457676106133\n"
+      "Array: [[2.67496492e-01 3.55474677e-01 1.59312868e-02 7.96833783e-01\n",
+      "  8.39917274e-04]\n",
+      " [4.59692881e-01 8.04624580e-01 2.68861088e-01 8.09269202e-01\n",
+      "  6.92048159e-01]\n",
+      " [6.53465320e-01 9.20487405e-01 5.47480990e-01 5.79860216e-01\n",
+      "  7.83843094e-01]\n",
+      " [4.12208305e-01 9.17804931e-01 8.07312136e-01 6.91403105e-03\n",
+      "  6.87214747e-01]]\n",
+      "0.0008399172743615013\n",
+      "0.9204874052759338\n",
+      "0.5393831621207632\n"
      ]
     }
    ],
@@ -132,20 +127,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12 28 26 24  6  4  0  0  0  0  0  0  0  0  0  0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a random 1-dimensional array\n",
-    "# array = \n",
+    "array = np.random.randint(1, 51, size=10)\n",
     "\n",
     "# Concatenate the original array with an array of zeros\n",
-    "# concatenated_array = \n",
+    "zeros_array = np.zeros(10, dtype=int)\n",
+    "concatenated_array = np.concatenate((array, zeros_array))\n",
     "\n",
     "# Filter out values greater than 30\n",
-    "# filtered_array = \n",
+    "filtered_array = concatenated_array[concatenated_array <= 30]\n",
     "\n",
-    "# print(filtered_array)"
+    "print(filtered_array)"
    ]
   },
   {
@@ -164,20 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 6 4 3 8 4 2 6 7 7 9 6] [ 9  4 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 2-dimensional array\n",
-    "# array = \n",
+    "array = np.random.randint(1, 11, size=(3,4))\n",
     "\n",
     "# Reshape the array into a 1-dimensional array\n",
-    "# reshaped_array = \n",
+    "reshaped_array = array.reshape(-1)\n",
     "\n",
     "# Find the indices of the top three maximum values\n",
-    "# indices = \n",
+    "# Used np.argsort to get the indices that would sort the array, and then pick the last three indices for the top three maximum values\n",
+    "indices = np.argsort(reshaped_array)[-3:]\n",
     "\n",
-    "# print(indices)"
+    "print(reshaped_array, indices)"
    ]
   },
   {
@@ -198,21 +211,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4 11 12 18 24 31 38 43 44 45 50 54 55 61 62 75 80 82 84 90 98 99]\n",
+      "(array([2, 4], dtype=int64), array([4, 1], dtype=int64))\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a random 2-dimensional array\n",
-    "# array = \n",
+    "array = np.random.randint(1,101, size=(5,5))\n",
     "\n",
     "# Find the unique elements\n",
-    "# unique_elements = \n",
+    "unique_elements = np.unique(array)\n",
     "\n",
     "# Retrieve the indices of all occurrences of the minimum value\n",
-    "# indices = \n",
-    "\n",
-    "# print(unique_elements)\n",
-    "# print(indices)"
+    "min_value = np.min(unique_elements)\n",
+    "min_value_indices = np.where(array == min_value)\n",
+    "min_value_coordinates = list(zip(min_value_indices[0], min_value_indices[1]))\n",
+    "print(unique_elements)\n",
+    "print(min_value_indices)"
    ]
   },
   {
@@ -231,20 +254,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[73 44 77  1 67 16]\n",
+      " [68 52 40 49 32 24]\n",
+      " [51 19 22 54  5 89]\n",
+      " [29 50 49 42 77 14]\n",
+      " [ 9 58 94 96 34 41]\n",
+      " [79  5 51 56 44 70]]\n",
+      "Row with max sum: [ 9 58 94 96 34 41]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 2-dimensional array\n",
-    "# array = \n",
-    "\n",
+    "array = np.random.randint(1,101, size=(6,6))\n",
+    "print(array)\n",
     "# Calculate the sum of each row\n",
-    "# row_sums = \n",
+    "row_sums = np.sum(array, axis=1)\n",
     "\n",
     "# Retrieve the row with the maximum sum\n",
-    "# max_sum_row = \n",
-    "\n",
-    "# print(max_sum_row)"
+    "max_index = np.argmax(row_sums)\n",
+    "max_sum_row = array[max_index]\n",
+    "print(\"Row with max sum:\", max_sum_row)"
    ]
   },
   {
@@ -263,17 +300,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 8  2 84 97 38 90 14 18 55 27  4 53 21 60 24 95 55 29 46  1]\n",
+      "[ 0  0  0 97  0  0  0  0 55 27  0 53 21  0  0 95 55 29  0  1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a random 1-dimensional array\n",
-    "# array = \n",
+    "array = np.random.randint(1, 101, size=20)\n",
+    "print(array)\n",
     "\n",
     "# Replace all even values with zeros\n",
-    "# filtered_array = \n",
+    "filtered_array = np.where(array % 2 == 0, 0, array)\n",
     "\n",
-    "# print(filtered_array)"
+    "print(filtered_array)"
    ]
   },
   {
@@ -294,17 +341,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  9  5]\n",
+      " [ 7  6 10]\n",
+      " [ 3 10 10]]\n",
+      "[[10 18 10]\n",
+      " [14 12 20]\n",
+      " [ 6 20 20]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 2-dimensional array\n",
-    "# array = \n",
+    "array = np.random.randint(1, 11, size=(3,3))\n",
+    "print(array)\n",
     "\n",
     "# Multiply each element by a scalar value of 2\n",
-    "# multiplied_array = \n",
+    "multiplied_array = array * 2\n",
     "\n",
-    "# print(multiplied_array)"
+    "print(multiplied_array)"
    ]
   },
   {
@@ -324,21 +385,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[90 54 52 49 47 33 25 19 15  6]\n",
+      "[2 7 6 3 0 8 1 5 9 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a random 1-dimensional array\n",
-    "# array = \n",
+    "array = np.random.randint(1, 100, size=10)\n",
     "\n",
     "# Sort the array in descending order\n",
-    "# sorted_array = \n",
+    "sorted_descending_array = np.sort(array)[::-1]\n",
     "\n",
     "# Retrieve the indices that would sort the array in ascending order\n",
-    "# ascending_indices = \n",
+    "ascending_indices = np.argsort(array) \n",
     "\n",
-    "# print(sorted_array)\n",
-    "# print(ascending_indices)"
+    "print(sorted_descending_array)\n",
+    "print(ascending_indices)"
    ]
   },
   {
@@ -359,23 +429,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  3  4  5]\n",
+      " [ 7  8  9 10]\n",
+      " [12 13 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 1-dimensional array\n",
-    "# array = \n",
+    "array = np.arange(1,13)\n",
     "\n",
     "# Reshape the array into a 2-dimensional array\n",
-    "# reshaped_array = \n",
+    "reshaped_array = array.reshape(3,4)\n",
     "\n",
     "# Create a 1-dimensional array to be added to each column\n",
-    "# addition_array = \n",
+    "addition_array = np.array([1, 2, 3]).reshape(3, 1)\n",
     "\n",
     "# Add the 1-dimensional array to each column\n",
-    "# result_array = \n",
+    "result_array = reshaped_array + addition_array\n",
     "\n",
-    "# print(result_array)"
+    "print(result_array)"
    ]
   },
   {
@@ -394,17 +474,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.78553879 0.02707079 0.30650075 0.87704574 0.98210929 0.73498659\n",
+      " 0.72268379 0.50908197 0.23564669 0.91467334]\n",
+      "[1 0 0 1 1 1 1 1 0 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a random 1-dimensional array\n",
-    "# array = \n",
+    "array = np.random.rand(10)\n",
+    "print(array)\n",
     "\n",
     "# Create a new array with values replaced by 0 or 1\n",
-    "# new_array = \n",
+    "new_array = np.where(array > 0.5, 1, 0)\n",
     "\n",
-    "# print(new_array)"
+    "print(new_array)"
    ]
   }
  ],
